==> elise0528/STM32F103_WS2812/Drivers/BSP/Src/bsp_esp8266.c <==
#include "bsp_esp8266.h"

void ESP8266_Stop(void)
{
  ESP8266_RST_LOW();

  HAL_NVIC_DisableIRQ(ESP8266_USARTx_IRQn);

  ESP8266_USART_RCC_CLK_DISABLE();
}

void ESP8266_Rst(void)
{
#if 0
	 ESP8266_Cmd ( "AT+RST", "OK", "ready", 2500 );
#else
  ESP8266_RST_LOW();
  HAL_Delay(500);
  ESP8266_RST_HIGH();
#endif
}

bool ESP8266_Cmd(char *cmd, char *reply1, char *reply2, uint32_t waittime)
{
  strEsp8266_Frame_Record.InfBit.FrameLength = 0; //从新开始接收新的数据包

  ESP8266_Usart("%s\r\n", cmd);

  if ((reply1 == 0) && (reply2 == 0)) //不需要接收数据
    return true;

  HAL_Delay(waittime); //延时

  strEsp8266_Frame_Record.Data_RX_BUF[strEsp8266_Frame_Record.InfBit.FrameLength] = '\0';

  PC_Usart("\n%s", strEsp8266_Frame_Record.Data_RX_BUF);
  //  printf("%s->%s\n",cmd,strEsp8266_Frame_Record .Data_RX_BUF);
  if ((reply1 != 0) && (reply2 != 0))
    return ((bool)strstr(strEsp8266_Frame_Record.Data_RX_BUF, reply1) ||
            (bool)strstr(strEsp8266_Frame_Record.Data_RX_BUF, reply2));

  else if (reply1 != 0)
    return ((bool)strstr(strEsp8266_Frame_Record.Data_RX_BUF, reply1));

  else
    return ((bool)strstr(strEsp8266_Frame_Record.Data_RX_BUF, reply2));
}

void ESP8266_USART_printf(USART_TypeDef *USARTx, char *Data, ...)
{
  unsigned char UsartPrintfBuf[296];
  va_list ap;
  unsigned char *pStr = UsartPrintfBuf;

  va_start(ap, Data);
  vsnprintf((char *)UsartPrintfBuf, sizeof(UsartPrintfBuf), Data, ap); //格式化
  va_end(ap);

  while (*pStr != 0) // 判断是否到达字符串结束符
  {
    HAL_UART_Transmit(&husartx_esp8266, (uint8_t *)pStr++, 1, 0xFF);
    while (__HAL_UART_GET_FLAG(&husartx_esp8266, USART_FLAG_TXE) == 0)
      ;
  }
}

bool ESP8266_AT_Test(void)
{
  char count = 0;

  ESP8266_RST_HIGH();
  HAL_Delay(1000);
  while (count < 10)
  {
    if (ESP8266_Cmd("AT", "OK", NULL, 1000))
      return 1;
    ESP8266_Rst();
    HAL_Delay(1000);
    ++count;
  }
  return 0;
}

char *ESP8266_ReceiveString(FunctionalState enumEnUnvarnishTx)
{
  char *pRecStr = 0;

  strEsp8266_Frame_Record.InfBit.FrameLength = 0;
  strEsp8266_Frame_Record.InfBit.FrameFinishFlag = 0;

  while (!strEsp8266_Frame_Record.InfBit.FrameFinishFlag)
    ;
  strEsp8266_Frame_Record.Data_RX_BUF[strEsp8266_Frame_Record.InfBit.FrameLength] = '\0';

  if (enumEnUnvarnishTx)
    pRecStr = strEsp8266_Frame_Record.Data_RX_BUF;
  else
  {
    if (strstr(strEsp8266_Frame_Record.Data_RX_BUF, "+IPD"))
      pRecStr = strEsp8266_Frame_Record.Data_RX_BUF;
  }
  return pRecStr;
}
